Homepage: Correct font sizes and letter spacing

--- a/src/components/ContentBlock/ContentBlock.css
+++ b/src/components/ContentBlock/ContentBlock.css
@@ -27,8 +27,9 @@
   max-width: 45rem;
   ;
   p {
-    font-size: 2.3rem;
-    line-height: 1.7;
+    font-size: 2.5rem;
+    line-height: 1.68;
+    letter-spacing: 0.01em;
   }
 }
 .title {
@@ -40,7 +41,8 @@
 .headingLogo {
   display: flex;
   align-items: center;
-  font-size: 3.5rem;
+  font-size: 3.4rem;
+  letter-spacing: -0.05em;
   color: $red;
 }
 .headingLogoText {
